--- a/public/css/tour/tour.css
+++ b/public/css/tour/tour.css
@@ -3586,6 +3586,35 @@
     gap: 12px;
 }
 
+.content-custom-table {
+    padding: 0 50px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+ .content-custom-table .content-item {
+    display: flex;
+    gap: 50px;
+    padding: 32px 0;
+}
+
+ .content-custom-table .content-item:not(:last-child) {
+    border-bottom: 1px dashed #ccc;
+}
+
+ .content-custom-table .content-item .label {
+    font-size: 18px;
+    align-items: center;
+    display: flex;
+    min-width: 300px;
+}
+
+ .content-custom-table .content-item .description {
+    font-size: 17px;
+    line-height: 1.5rem;
+}
+
+
 .custom-golf-detail .text-parent span {
     color: #999999;
     font-size: 16px;
