--- a/public/css/tour/tour.css
+++ b/public/css/tour/tour.css
@@ -4626,6 +4626,7 @@
 
 .travel-tips .content_sec .list_item {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
     border-radius: 5px;
