--- a/public/css/tour/tour.css
+++ b/public/css/tour/tour.css
@@ -1,3 +1,4 @@
+
 .img_box_9 {
     padding-top: calc(420% / 660 * 100);
 }
@@ -5010,4 +5011,161 @@
     right: -5px;
     font-size: 10px;
     color: #333;
+}
+
+
+.hot_place .sec_banner {
+    position: relative;
+    margin: 45px 0 95px;
+}
+
+.hot_place .sec_banner .text_banner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: #fff;
+}
+
+.hot_place .sec_banner .text_banner span {
+    font-size: 26px;
+    font-weight: 700;
+    margin-bottom: 13px;
+    display: block;
+}
+
+.hot_place .sec_banner .text_banner p {
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.hot_place .input_search_box {
+    display: flex;
+    width: 270px;
+    height: 50px;
+    border: 1px solid #dbdbdb;
+    align-items: center;
+    justify-content: space-between;
+    padding-right: 18px;
+    margin-left: auto;
+    margin-bottom: 20px;
+
+}
+.hot_place .input_search_box input {
+    border: none;
+    outline: none;
+    font-size: 16px;
+    height: 100%;
+}
+
+
+.hot_place .list_place {
+    padding-top: 30px;
+    padding-bottom: 46px;
+    border-top: 1px solid #dbdbdb;
+    border-bottom: 1px solid #dbdbdb;
+    display: flex;
+    gap: 43px 20px;
+    flex-wrap: wrap;
+}
+
+.hot_place .list_place .item {
+    width: calc((100% - 40px) / 3);
+    position: relative;
+    display: block;
+    overflow: hidden;
+}
+
+.hot_place .list_place .item .img {
+    width: 100%;
+    height: 284px;
+
+}
+
+
+.hot_place .list_place .item .img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: all .2s;
+
+}
+
+.hot_place .list_place .item  .title {
+    margin-top: 25px ;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 15px;
+    color: #757575;
+}
+
+.hot_place .list_place .item  .title .star {
+    color: #252525;
+}
+
+.hot_place .list_place .item .name {
+    font-size: 20px;
+    font-weight: 700;
+    margin-top: 12px;
+}
+
+
+.hot_place .list_place .item .desc {
+    font-size: 16px;
+    font-weight: 400;
+    margin-top: 22px;
+    line-height: 1.4;
+    display: -webkit-box;
+    overflow: hidden;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+}
+
+.hot_place .list_place .item .comt {
+    font-size: 16px;
+    font-weight: 400;
+    color: #757575;
+    margin-top: 19px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+
+.hot_place .pagination {
+    margin: 32px 0 128px 0 !important;
+    display: flex;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.hot_place .page-link {
+    display: inline-block;
+    padding: 10px 15px;
+    margin: 0 5px;
+    text-decoration: none;
+    color: #333;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.hot_place .page-link.ml {
+    margin-left: 24px;
+}
+
+.hot_place .page-link.mr {
+    margin-right: 24px;
+}
+
+.hot_place .page-link:hover {
+    background-color: #f0f0f0;
+}
+
+.hot_place .page-link.active {
+    color: var(--bs-point);
+    border-color: var(--bs-point);
 }
