--- a/public/css/tour/tour.css
+++ b/public/css/tour/tour.css
@@ -1,4 +1,3 @@
-
 .img_box_9 {
     padding-top: calc(420% / 660 * 100);
 }
@@ -128,8 +127,7 @@
     width: 660px;
 }
 
-.sub_swiper1 {
-}
+.sub_swiper1 {}
 
 .sub_tour_section2 {
     padding: 100px 0 0 0;
@@ -792,7 +790,7 @@
     text-align: center;
 }
 
-.content-sub-product-hotel .category-left-tit .depth_2_item_new_.active_{
+.content-sub-product-hotel .category-left-tit .depth_2_item_new_.active_ {
     color: #17469E;
 }
 
@@ -1313,7 +1311,7 @@
     font-weight: 500;
 }
 
-.content-sub-product-hotel .list-item-info .item-info.promotion_n .item-info-label .label_add p{
+.content-sub-product-hotel .list-item-info .item-info.promotion_n .item-info-label .label_add p {
     font-size: 15px;
     color: #2e6689;
 }
@@ -3598,24 +3596,24 @@
     border-radius: 5px;
 }
 
- .content-custom-table .content-item {
+.content-custom-table .content-item {
     display: flex;
     gap: 50px;
     padding: 32px 0;
 }
 
- .content-custom-table .content-item:not(:last-child) {
+.content-custom-table .content-item:not(:last-child) {
     border-bottom: 1px dashed #ccc;
 }
 
- .content-custom-table .content-item .label {
+.content-custom-table .content-item .label {
     font-size: 18px;
     align-items: center;
     display: flex;
     min-width: 130px;
 }
 
- .content-custom-table .content-item .description {
+.content-custom-table .content-item .description {
     font-size: 17px;
     line-height: 1.5rem;
 }
@@ -3681,7 +3679,7 @@
     border-radius: 4px;
 }
 
-.custom-golf-detail .calendar .year .btn_year_new img{
+.custom-golf-detail .calendar .year .btn_year_new img {
     filter: invert(1);
 }
 
@@ -3802,7 +3800,8 @@
 }
 
 .custom-golf-detail .box-selecter .ic_item .body-box .box.active {
-    border-color: var(--bs-point);;
+    border-color: var(--bs-point);
+    ;
 }
 
 .custom-golf-detail .box-selecter .ic_item .body-box .box p {
@@ -3815,7 +3814,7 @@
     color: var(--bs-point);
 }
 
-.custom-golf-detail .box-selecter + .box-selecter {
+.custom-golf-detail .box-selecter+.box-selecter {
     margin-bottom: 30px;
 }
 
@@ -4852,10 +4851,11 @@
 }
 
 .travel-tips .sec_05 {
-    background-color: #f7f7f7 ;
-    padding-top: 75px ;
-    padding-bottom: 95px ;
+    background-color: #f7f7f7;
+    padding-top: 75px;
+    padding-bottom: 95px;
 }
+
 .travel-tips .sec_05 .list_travel_banner {
     display: flex;
     justify-content: space-between;
@@ -4871,7 +4871,7 @@
 }
 
 .travel-tips .sec_06 {
-    padding : 110px 0
+    padding: 110px 0
 }
 
 .travel-tips .sec_06 .list_travel_banner {
@@ -4886,7 +4886,7 @@
 }
 
 .travel-tips .sec_06 .swiper-slide {
-    width : calc(100% / 3 - 13px)
+    width: calc(100% / 3 - 13px)
 }
 
 .price_secret_wrap {
@@ -5053,6 +5053,7 @@
     margin-bottom: 20px;
 
 }
+
 .hot_place .input_search_box input {
     border: none;
     outline: none;
@@ -5093,8 +5094,8 @@
 
 }
 
-.hot_place .list_place .item  .title {
-    margin-top: 25px ;
+.hot_place .list_place .item .title {
+    margin-top: 25px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -5102,7 +5103,7 @@
     color: #757575;
 }
 
-.hot_place .list_place .item  .title .star {
+.hot_place .list_place .item .title .star {
     color: #252525;
 }
 
@@ -5135,7 +5136,7 @@
 }
 
 
-.hot_place .pagination {
+.custom.pagination {
     margin: 32px 0 128px 0 !important;
     display: flex;
     list-style: none;
@@ -5143,7 +5144,7 @@
     margin: 0;
 }
 
-.hot_place .page-link {
+.custom .page-link {
     display: inline-block;
     padding: 10px 15px;
     margin: 0 5px;
@@ -5154,19 +5155,172 @@
     transition: background-color 0.3s, color 0.3s;
 }
 
-.hot_place .page-link.ml {
+.custom .page-link.ml {
     margin-left: 24px;
 }
 
-.hot_place .page-link.mr {
+.custom .page-link.mr {
     margin-right: 24px;
 }
 
-.hot_place .page-link:hover {
+.custom .page-link:hover {
     background-color: #f0f0f0;
 }
 
-.hot_place .page-link.active {
+.custom .page-link.active {
     color: var(--bs-point);
     border-color: var(--bs-point);
+}
+
+.travel_info h2 {
+    font-size: 28px;
+    font-weight: 700;
+    margin-bottom: 32px;
+    padding-top: 40px;
+    text-align: center;
+}
+
+.travel_info .list_tab_head {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    align-items: center;    
+    margin-bottom: 33px;
+}
+
+.travel_info .list_tab_head .tab {
+    padding: 7px 12px;
+    color: #757575;
+    font-size: 16px;
+    font-weight: 500;
+    border-radius: 99px;
+    border: 1px solid #dbdbdb;
+    cursor: pointer;
+    min-width: 70px;
+    text-align: center;
+}
+
+.travel_info .list_tab_head .tab.on {
+    background-color: #2a459f;
+    color: #fff;
+}
+
+.travel_info .head_list_product {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.travel_info .head_list_product .total_text {
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.travel_info .head_list_product .total_text span {
+    color: #2a459f;
+}
+
+.travel_info .head_list_product select {
+    width: 140px;
+    height: 50px;
+    border: 1px solid #dbdbdb;
+    padding: 0 20px;
+    margin-left: auto;
+}
+
+.travel_info .head_list_product .input_search_box {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border: 1px solid #dbdbdb;
+    padding-right: 20px;
+    margin-left: 10px;
+    height: 50px;
+    width: 270px;
+}
+
+.travel_info .head_list_product .input_search_box input {
+    border: none;
+    outline: none;
+    font-size: 16px;
+    height: 100%;
+}
+
+.travel_info .list_product .item {
+    display: flex;
+    align-items: center;
+    gap: 25px;
+    padding: 27px 0;
+    border-bottom: 1px solid #dbdbdb;
+}
+
+.travel_info .list_product .item:first-child {
+    border-top: 1px solid #dbdbdb;
+}
+
+.travel_info .list_product .item .img {
+    width: 350px;
+    
+}
+
+.travel_info .list_product .item .img img {
+    width: 100%;
+    object-fit: cover;
+    
+}
+
+.travel_info .list_product .item .text {
+    flex: 1;
+}
+
+.travel_info .list_product .item .tit {
+    font-size: 15px;
+    margin-bottom: 14px;
+    color: #757575;
+    display: block;
+}
+
+.travel_info .list_product .item .name {
+    font-size: 20px;
+    margin-bottom: 28px;
+    font-weight: 500;
+}
+
+
+.travel_info .list_product .item .desc {
+    padding: 20px;
+    background-color: #f7f7f7;
+    margin-bottom: 30px;
+}
+
+.travel_info .list_product .item .desc_inner {
+    font-size: 16px;
+    color: #757575;
+    line-height: 1.5;
+    display: -webkit-box;
+    overflow: hidden;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+}
+
+.travel_info .list_product .item .info {
+    color: #757575;
+    font-size: 16px;
+
+}
+
+.travel_info .list_product .item .info .date {
+    padding-right: 12px;
+    border-right: 1px solid #757575;
+}
+
+.travel_info .list_product .item .info .author {
+    padding-left: 12px;
+    padding-right: 12px;
+    border-right: 1px solid #757575;
+}
+
+.travel_info .list_product .item .info .view {
+    padding-left: 12px;
 }
