--- a/public/css/mypage/mypage_new.css
+++ b/public/css/mypage/mypage_new.css
@@ -1932,7 +1932,7 @@ input[type="checkbox"]:checked+label {
 
 
 
-.estimate_popup_wrap {
+.custom_popup {
     position: fixed;
     top: 0;
     left: 0;
@@ -1943,19 +1943,19 @@ input[type="checkbox"]:checked+label {
     display: none;
 }
 
-.estimate_popup_content {
+.custom_popup_content {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 740px;
-    height: 780px;
+    min-height: 500px;
     padding: 34px;
     border-radius: 8px;
     background-color: #fff;
 }
 
-.estimate_popup_content  .btn_close_popup {
+.custom_popup_content  .btn_close_popup {
     position: absolute;
     top : 0;
     right: 0;
@@ -1963,60 +1963,60 @@ input[type="checkbox"]:checked+label {
     cursor: pointer;
 }
 
-.estimate_popup_wrap h1 {
+.custom_popup h1 {
     text-align: center;
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 30px
 }
 
-.estimate_popup_wrap .sec1 {
+.custom_popup .sec1 {
     display: flex;
     /* gap: 30px; */
     justify-content: space-between;
 }
 
-.estimate_popup_wrap .sec1 .left {
+.custom_popup .sec1 .left {
     position: relative;
     width: 294px;
 }
 
-.estimate_popup_wrap .sec1 .left .img_stem {
+.custom_popup .sec1 .left .img_stem {
     position: absolute;
     top: 12px;
     right: 5px;
     width: 60px;
 }
 
-.estimate_popup_wrap .sec1 .ttl {
+.custom_popup .sec1 .ttl {
     font-size: 16px;
     margin-bottom: 8px;
     color: #353535;
     font-weight: 600;
 }
 
-.estimate_popup_wrap .sec1 .left>span {
+.custom_popup .sec1 .left>span {
     font-size: 14px;
     color: #757575;
     margin-bottom: 5px;
     display: block;
 }
 
-.estimate_popup_wrap .sec1 .left .day,
-.estimate_popup_wrap .sec1 .left .name {
+.custom_popup .sec1 .left .day,
+.custom_popup .sec1 .left .name {
     font-size: 14px;
     color: #252525;
     padding: 10px 0;
     border-bottom: 1px solid #999
 }
 
-.estimate_popup_wrap table {
+.custom_popup table {
     border-collapse: collapse;
     width: 100%;
 }
 
-.estimate_popup_wrap td,
-.estimate_popup_wrap th {
+.custom_popup td,
+.custom_popup th {
     border: 1px solid #dbdbdb;
     padding: 6px;
     text-align: center;
@@ -2024,19 +2024,19 @@ input[type="checkbox"]:checked+label {
     color: #252525
 }
 
-.estimate_popup_wrap th {
+.custom_popup th {
     background-color: #fafafa
 }
 
-.estimate_popup_wrap tr .total {
+.custom_popup tr .total {
     color: rgb(250, 17, 17)
 }
 
-.estimate_popup_wrap .sec2 {
+.custom_popup .sec2 {
     margin-top: 40px
 }
 
-.estimate_popup_wrap .sec2 .time {
+.custom_popup .sec2 .time {
     font-size: 14px;
     font-weight: 600;
     text-align: left;
@@ -2044,28 +2044,28 @@ input[type="checkbox"]:checked+label {
 
 }
 
-.estimate_popup_wrap .sec2 .time+p {
+.custom_popup .sec2 .time+p {
     text-align: left;
     color: #757575;
     font-size: 12px
 }
 
-.estimate_popup_wrap .sec2 td {
+.custom_popup .sec2 td {
     padding: 12px
 }
 
-.estimate_popup_wrap .list_desc {
+.custom_popup .list_desc {
     margin-top: 20px;
     margin-bottom: 34px;
 }
 
-.estimate_popup_wrap .list_desc p {
+.custom_popup .list_desc p {
     font-size: 13px;
     color: #656565;
     line-height: 1.4;
 }
 
-.estimate_popup_wrap .send_mail {
+.custom_popup .send_mail {
     display: flex;
     align-items: center;
     gap : 8px;
@@ -2073,7 +2073,7 @@ input[type="checkbox"]:checked+label {
     border-top: 1px solid #dbdbdb;
 }
 
-.estimate_popup_wrap .send_mail input {
+.custom_popup .send_mail input {
     flex: 1;
     padding: 0 10px;
     border: 1px solid #dbdbdb;
@@ -2083,7 +2083,7 @@ input[type="checkbox"]:checked+label {
     color : #555
 }
 
-.estimate_popup_wrap .send_mail button {
+.custom_popup .send_mail button {
     font-size: 14px;
     font-weight: 700;
     color: #666;
@@ -2092,7 +2092,7 @@ input[type="checkbox"]:checked+label {
     padding: 10px 20px;
 }
 
-.estimate_popup_wrap .btns_download {
+.custom_popup .btns_download {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -2100,7 +2100,7 @@ input[type="checkbox"]:checked+label {
     margin-top: 35px
 }
 
-.estimate_popup_wrap .btns_download button {
+.custom_popup .btns_download button {
     font-size: 15px;
     font-weight: 700;
     padding: 16px 36px;
@@ -2108,4 +2108,56 @@ input[type="checkbox"]:checked+label {
     color: #fff;
     border: none;
 
+}
+
+
+.group_movement_popup_wrap h1 {
+    text-align: left;
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 30px;
+}
+
+.custom_popup .box_select {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.custom_popup .box_select select {
+    width: 200px;
+    height: 40px;
+    font-size: 16px;
+}
+
+.custom_popup .box_select .btn_select  {
+    height: 52px;
+    width: 160px;
+    background-color: #2e3e92;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    color: #fff;
+    cursor: pointer;
+}
+
+.custom_popup tr label {
+    position: relative;
+    width : 18px;
+    height: 18px;
+    padding: 0;
+    background-size: 18px 18px;
+}
+
+.custom_popup tr input:checked + label {
+    background-size: 18px 18px;
+    
+}
+
+.group_movement_popup_wrap .list_desc p{
+    font-size: 16px;
+    font-weight: 600;
+    color: #252525;
 }
