--- a/public/css/contents/main.css
+++ b/public/css/contents/main.css
@@ -174,6 +174,21 @@
     -webkit-box-orient: vertical;
 }
 
+.main_sale_banner .banner_bt {
+    
+    border-radius: 7px;
+    width: 123px;
+    overflow: hidden;
+    
+}
+
+.main_sale_banner .banner_bt img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+
+}
+
 .swiper-button-main {
     /*background-color: rgba(0, 0, 0, 0.502);*/
     position: absolute;
