--- a/public/css/tour/tour.css
+++ b/public/css/tour/tour.css
@@ -3094,6 +3094,10 @@
     margin: 40px 0;
 }
 
+.tours-detail.spa-detail .open_time {
+    margin-bottom: 20px;
+}
+
 .tours-detail p.des-type {
     font-size: 17px;
     line-height: 1.5rem;
