update-travel-tips-admin

--- a/public/css/tour/tour.css
+++ b/public/css/tour/tour.css
@@ -4873,7 +4873,8 @@
 
 .travel-tips .sec_05 .list_travel_banner {
     display: flex;
-    justify-content: space-between;
+    gap: 20px;
+    /* justify-content: space-between; */
     align-items: center;
 
 }
