update-reservation-admin

--- a/public/css/contents/common.css
+++ b/public/css/contents/common.css
@@ -1077,7 +1077,7 @@ figure.cover_img img {
 .prd_keywords {
   font-size: 16px;
   font-family: "Pretendard";
-  color: #397eb9;
+  color: #f2f2fe;
   display: flex;
   gap: 4px;
   align-items: center;
