--- a/public/css/tour/tour.css
+++ b/public/css/tour/tour.css
@@ -1241,7 +1241,7 @@
 }
 
 .content-sub-product-hotel .list-item-info .item-info {
-    margin: 0 0 40px 0;
+    margin: 10px 0 20px 0;
 }
 
 .content-sub-product-hotel .list-item-info .item-info.promotion_n {
