--- a/public/css/tour/tour.css
+++ b/public/css/tour/tour.css
@@ -5378,3 +5378,28 @@
     font-weight: 500;
     margin-top: 25px;
 }
+
+.view_container .view_top_wrap {
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: #efefef;
+    border-top: 1px solid #666;
+    border-bottom: 1px solid #e9e9e9;
+}
+
+.view_container .view_top_wrap .view_top_ttl {
+    font-size: 15px;
+}
+
+.view_container .view_top_wrap .view_top_info {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.view_container .view_top_wrap .view_top_info .date,
+.view_container .view_top_wrap .view_top_info .view {
+    color: #666;
+}
