--- a/public/css/layout/footer.css
+++ b/public/css/layout/footer.css
@@ -15,7 +15,7 @@
     display: flex;
     align-items: center;
     gap: 22px;
-    padding: 18px 0;
+    padding: 18px 0 !important;
     color: rgba(255, 255, 255, 1);
 }
 
