--- a/public/css/layout/header.css
+++ b/public/css/layout/header.css
@@ -195,6 +195,26 @@
     text-decoration: none;
 }
 
+.icon-menu-cart {
+    position: relative;
+}
+
+.icon-menu-cart .cart_count {
+    position: absolute;
+    top: -5px;
+    right: 3px;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background-color: red;
+    color: #fff;
+    font-size: 8px;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .icon-menu-item.icon_my_page {
     display: flex;
     align-items: center;
