--- a/public/css/layout/header.css
+++ b/public/css/layout/header.css
@@ -203,9 +203,10 @@
     position: absolute;
     top: -5px;
     right: 3px;
-    width: 15px;
+    min-width: 15px;     
     height: 15px;
-    border-radius: 50%;
+    padding: 0 5px;  
+    border-radius: 50%;  
     background-color: red;
     color: #fff;
     font-size: 8px;
@@ -213,6 +214,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.count_like {
+    font-size: 14px;
 }
 
 .icon-menu-item.icon_my_page {
