--- a/public/css/tour/tour.css
+++ b/public/css/tour/tour.css
@@ -5409,3 +5409,394 @@
 .view_container .view_top_wrap .view_top_info .view {
     color: #666;
 }
+
+/* theme area begin */
+
+.monkey_theme ul {
+    padding: 0;
+    display: flex;
+    flex-flow: row wrap;
+    align-content: baseline;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 0;
+}
+
+.monkey_theme li {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    width: 310px;
+    height: 400px;
+    /* margin: 20px 11px 0; */
+}
+
+.theme_banner {
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
+    overflow: hidden;
+    position: relative;
+}
+
+.monkey_theme li img {
+    height: 100%;
+    object-fit: cover;
+    border-radius: 15px;
+    position: absolute;
+}
+
+.theme_boxinfo {
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, .4);
+    box-sizing: border-box;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    text-align: center;
+}
+
+.theme_boxinfo:hover {
+    background-color: rgba(0, 0, 0, .2);
+}
+
+.theme_banner img {
+    transition: transform 0.5s ease;
+    transform-origin: center center;
+}
+
+.theme_banner .desc {
+    text-align: center;
+    color: #fff;
+    font-size: 13px;
+    display: inline-block;
+    margin-top: 148px;
+    background: #fb2f2f;
+    padding: 3px 10px;
+    border-radius: 20px;
+}
+
+.theme_banner .subtitle {
+    font-size: 13px;
+    color: #fff;
+    display: block;
+    margin-top: 10px;
+}
+
+.theme_banner .title {
+    font-size: 20px;
+    text-align: center;
+    color: #fff;
+    display: block;
+    padding-bottom: 10px;
+    margin-top: 10px;
+    font-weight: 400;
+}
+
+.theme-section {
+    margin-bottom: 50px;
+    border-bottom: 1px solid #dddddd7d;
+}
+
+.theme_top {
+    width: 100%;
+    height: 534px;
+    overflow: hidden;
+    margin-bottom: 15px;
+    position: relative;
+}
+
+.theme_head01.theme_top {
+    width: 100%;
+    height: 400px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 30px;
+}
+
+.theme_head01.theme_top:before {
+    content: "";
+    width: 100%;
+    height: 434px;
+    background: #00000070;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.theme_head01.theme_top .theme_headline {
+    width: 100%;
+    top: 120px;
+    text-align: center;
+    position: absolute;
+    color: #fff;
+}
+
+.theme_head01.theme_top .theme_headline h3 {
+    font-size: 20px;
+    display: block;
+    margin-top: 10px;
+    font-weight: 400;
+}
+
+.theme_head01.theme_top .theme_headline h1 {
+    font-size: 50px;
+    display: block;
+    margin-top: 25px;
+}
+
+.stfcomment {
+    font-size: 16px;
+    padding: 0 20px;
+    color: #2ab6ad;
+    text-align: center;
+    margin: 30px 0;
+    line-height: 1.4;
+}
+
+.theme_cont {
+    position: relative;
+    display: none;
+    overflow: hidden;
+    text-align: left;
+}
+
+.theme_nbox {
+    width: 100%;
+    height: 670px;
+}
+
+.theme_nbox a {
+    text-decoration: none;
+    color: #000;
+    cursor: pointer;
+}
+
+.theme_nbox .theme_no {
+    margin: 35px 0;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+}
+
+.theme_nbox .theme_no span {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 88px;
+    height: 88px;
+    color: #fff;
+    border-radius: 50%;
+    background: #ff6300;
+    flex-direction: column;
+}
+
+.theme_nbox .theme_no span b {
+    display: block;
+    font-size: 30px;
+    font-weight: 600;
+}
+
+.theme_nbox .box_top {
+    width: 100%;
+    height: 295px;
+    overflow: hidden;
+    display: flex;
+    justify-content: space-between;
+    gap: 15px;
+}
+
+.theme_nbox .radius_right {
+    border-top-right-radius: 30px;
+}
+
+.theme_nbox .radius_left {
+    border-top-left-radius: 30px;
+}
+
+.theme_nbox .box_top .imgbox {
+    width: 50%;
+    height: 287px;
+    overflow: hidden;
+    position: relative;
+}
+
+.theme_nbox .box_top .imgbox img {
+    width: 100%;
+    position: absolute;
+    top: -50px;
+    left: 0;
+    min-height: 100%;
+}
+
+.theme_nbox .box_top .txtbox {
+    width: 50%;
+    height: 277px;
+    text-align: left;
+    padding: 10px 20px;
+}
+
+.theme_nbox .box_top .txtbox .rating>span {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 54px;
+    height: 14px;
+    background: transparent url(/img/ico/spr_sub.webp) no-repeat 0 -160px;
+}
+
+.theme_nbox .box_top .txtbox .rating {
+    top: -2px;
+    height: 14px;
+    background: transparent url(/img/ico/spr_sub.webp) no-repeat 0 -178px;
+    position: relative;
+    width: 80px;
+}
+
+.theme_nbox .box_top .txtbox h3 {
+    font-size: 21px;
+    padding-top: 15px;
+    color: #555;
+}
+
+.theme_nbox .box_top .txtbox .txt {
+    padding-top: 15px;
+    line-height: 1.4;
+}
+
+.box_top .btnbox .detailbtn {
+    float: left;
+    margin-right: 5px;
+}
+
+.theme_nbox .box_top .txtbox .detailbtn {
+    padding: 10px 20px;
+    border-radius: 20px;
+    border: 1px solid #e8e8e8;
+    margin-top: 15px;
+    display: inline-block;
+}
+
+.box_top.box_topleft .btnbox .detailbtn {
+    float: right;
+}
+
+.theme_nbox .box_top .txtbox .detailbtn i {
+    color: #ff6300;
+    margin-left: 5px;
+}
+
+.fa-chevron-right:before {
+    content: "\f054";
+}
+
+.theme_nbox .imgbox_bot {
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.theme_nbox .imgbox_bot span {
+    overflow: hidden;
+    width: 33.33%;
+    height: 216px;
+    display: block;
+}
+
+.theme_nbox .imgbox_bot span img {
+    width: 100%;
+    min-height: 216px;
+}
+
+.hoteltheme_main {
+    display: flex;
+    justify-content: center;
+    margin: 60px auto 80px;
+    flex-direction: column;
+    max-width: 1000px;
+    overflow: hidden;
+}
+
+.hoteltheme_main .head {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1.5rem;
+    align-items: center;
+}
+
+.hoteltheme_main .hotplace {
+    height: 430px;
+    position: relative;
+}
+
+.hoteltheme_main .hotplace .loc_banner {
+    height: 400px;
+    width: 320px !important;
+    position: relative;
+}
+
+.hoteltheme_main .hotplace .loc_banner a {
+    display: block;
+    width: 320px;
+    height: 100%;
+    position: relative;
+    margin: 0 auto;
+    overflow: hidden;
+    border-radius: 15px;
+    cursor: default;
+    text-align: left;
+}
+
+.hoteltheme_main .hotplace .loc_banner a .card {
+    position: absolute;
+    top: 0;
+    color: #fff;
+    width: 290px;
+    height: 350px;
+    padding: 0 0 50px 30px;
+    cursor: pointer;
+    z-index: 9;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+.hoteltheme_main .hotplace .loc_banner a:after {
+    content: '';
+    background-image: linear-gradient(to bottom, transparent, rgba(0, 0, 0, .7));
+    position: absolute;
+    bottom: 0;
+    height: 60%;
+    width: 100%;
+    border-radius: 15px;
+    left: 0;
+}
+
+.hoteltheme_main .hotplace .loc_banner a .card span {
+    color: #fff;
+    position: absolute;
+    top: 0;
+    background: #fb2f2f;
+    padding: 5px 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.hoteltheme_main .hotplace .loc_banner a .card strong {
+    font-size: 18px;
+    padding-bottom: 8px;
+    display: block;
+}
+
+.hoteltheme_main .hotplace .loc_banner a .card p {
+    opacity: .7;
+    color: #fff;
+    font-size: 14px;
+    padding-right: 15px;
+}
+
+/* theme area end */
