--- a/public/css/tour/tour.css
+++ b/public/css/tour/tour.css
@@ -5851,7 +5851,11 @@
     display: flex;
     flex-wrap: wrap;
     gap: 46px 18px;
+    padding-bottom: 50px;
+    border-bottom: 1px solid #dbdbdb;
 }
+
+
 
 .theme_travel .list_product .item_box {
     width: calc((100% - (18px * 3)) / 4);
