--- a/public/css/tour/tour.css
+++ b/public/css/tour/tour.css
@@ -3596,6 +3596,7 @@
 
 .custom-golf-detail .golf-table tbody td {
     /* white-space: nowrap; */
+    line-height: 1.3;
 }
 
 .custom-golf-detail .golf-table td[colspan="5"] {
