update-tour-detail

--- a/public/css/tour/tour.css
+++ b/public/css/tour/tour.css
@@ -5926,6 +5926,7 @@
 .tour_type_group {
     margin-top: 10px;
     display: flex;
+    justify-content: flex-end;
     align-items: center;
     gap: 10px;
 }
