update-tour-detail

--- a/public/css/tour/tour.css
+++ b/public/css/tour/tour.css
@@ -5946,9 +5946,9 @@
     color: #1bbacb;
 }
 
-.tour_type_group .view_info_company {
+/* .tour_type_group .view_info_company {
     margin-left: 50px;
-}
+} */
 
 .tour_type_group .view_info_company a {
     color: #252525;
