fix-golf-detail

--- a/public/css/tour/tour.css
+++ b/public/css/tour/tour.css
@@ -3896,10 +3896,10 @@
     margin-bottom: 30px;
     display: flex;
     align-items: center;
-    gap: 30px;
+    /* gap: 30px; */
 }
 
-.box-selecter .item-select .label {
+/* .box-selecter .item-select .label {
     width: 50px;
 }
 
@@ -3909,18 +3909,18 @@
 
 .body-box .box {
     width: 80px;
-}
+} */
 
 .custom-golf-detail .tag-con-below-calendar .item-tag.new {
     width: calc(50% - 40px);
 }
 
-.custom-golf-detail .tag-con-below-calendar .item-tag.new .label.first {
+/* .custom-golf-detail .tag-con-below-calendar .item-tag.new .label.first {
     width: 50px;
-}
+} */
 
 .custom-golf-detail .tag-con-below-calendar .cus-width {
-    width: 188px;
+    width: 280px;
     padding-left: 20px;
     padding-right: 0;
 }
@@ -4053,7 +4053,7 @@
 }
 
 .custom-golf-detail .list-select-element .item-select .select_custom_ {
-    width: 200px;
+    width: 230px;
 }
 
 .custom-golf-detail .list-select-element .item-select .vehicle_number {
@@ -4591,10 +4591,9 @@
     flex-wrap: wrap;
 }
 
-/* .custom-golf-detail .list-select-element .item-select .label {
+.custom-golf-detail .list-select-element .item-select .label {
     width: 70px;
-} */
-
+}
 
 .travel-tips .sec_banner {
     margin-top: 32px;
