--- a/public/css/tour/tour_responsive.css
+++ b/public/css/tour/tour_responsive.css
@@ -2247,6 +2247,7 @@
     margin-top: 6rem;
     display: flex;
     justify-content: space-between;
+    align-items: flex-start;
     margin-bottom: 3rem;
   }
 
@@ -2254,7 +2255,8 @@
     font-size: 3.6rem;
     font-weight: bold;
     line-height: 1.3;
-    width: 100%;
+    /* width: 100%; */
+    width: 70%;
     max-width: 100%;
   }
 
@@ -4551,6 +4553,12 @@
     font-size: 2.8rem;
     font-weight: 500;
     margin-top: 3.5rem;
+  }
+
+  
+  
+  .content-sub-hotel-detail .hotel-image-container .button-show-detail-image img {
+    width: 5.8rem !important;
   }
 
 
