--- a/public/css/admin/statistics.css
+++ b/public/css/admin/statistics.css
@@ -801,8 +801,9 @@
 
 .searchIcon2 {
     position: absolute;
-    right: 4%;
-    top: 5px;
+    right: 55px;
+    top: 50%;
+    transform: translateY(-50%);
     cursor: pointer;
 }
 
