update-footer-admin

--- a/public/css/layout/footer.css
+++ b/public/css/layout/footer.css
@@ -59,6 +59,7 @@
 .footer_icon {
     display: flex;
     align-items: center;
+    justify-content: end;
     gap: 10px;
     margin-top: 40px;
     margin-bottom: 40px;
