fix-review-list-golf-tour

--- a/public/css/tour/tour.css
+++ b/public/css/tour/tour.css
@@ -3546,7 +3546,7 @@
 }
 
 .custom-product-golf .product-card-item-container {
-    padding-bottom: 0;
+    padding-bottom: 32px;
 }
 
 .custom-product-golf .product-card-item-right .sub-title {
