fix-review-list-golf-tour

--- a/public/css/tour/tour.css
+++ b/public/css/tour/tour.css
@@ -3545,9 +3545,9 @@
     background-repeat: no-repeat;
 }
 
-.custom-product-golf .product-card-item-container {
+/* .custom-product-golf .product-card-item-container {
     padding-bottom: 32px;
-}
+} */
 
 .custom-product-golf .product-card-item-right .sub-title {
     padding-bottom: unset;
